# kimm_hqp_controller_phri

./: CMakeLists.txt  README.md  package.xml
bindings/python/: CMakeLists.txt  module.cpp
bindings/python/constraint/: constraint_bound.cpp  constraint_equality.cpp  constraint_inequality.cpp
bindings/python/formulation/: formulation.cpp
bindings/python/kimm_hqp/: __init__.py
bindings/python/kimm_hqp_controller/: __init__.py
bindings/python/robot/: robot_wrapper.cpp
bindings/python/solver/: HQPData.cpp  HQPOutput.cpp  solver_HQP_eiquadprog.cpp
bindings/python/tasks/: task_joint_bound.cpp  task_joint_posture.cpp  task_se3_equality.cpp
bindings/python/trajectory/: trajectory_base.cpp  trajectory_euclidian.cpp  trajectory_se3.cpp
include/kimm_hqp_controller/bindings/python/: fwd.hpp
include/kimm_hqp_controller/bindings/python/constraint/: constraint_bound.hpp  constraint_equality.hpp  constraint_inequality.hpp  expose_constraint.hpp
include/kimm_hqp_controller/bindings/python/formulation/: expose_formulation.hpp  formulation.hpp
include/kimm_hqp_controller/bindings/python/robot/: expose_robot.hpp  robot_wrapper.hpp
include/kimm_hqp_controller/bindings/python/solver/: HQPData.hpp  HQPOutput.hpp  expose_solver.hpp  solver_HQP_eiquadprog.hpp
include/kimm_hqp_controller/bindings/python/tasks/: expose_tasks.hpp  task_joint_bound.hpp  task_joint_posture.hpp  task_se3_equality.hpp
include/kimm_hqp_controller/bindings/python/trajectory/: expose_trajectory.hpp  trajectory_base.hpp  trajectory_euclidian.hpp  trajectory_se3.hpp
include/kimm_hqp_controller/bindings/python/util/: container.hpp
include/kimm_hqp_controller/contact/: contact_base.hpp  contact_point.hpp  fwd.hpp
include/kimm_hqp_controller/formulation/: contact_level.hpp  inverse_dynamics_formulation_acc.hpp  inverse_dynamics_formulation_base.hpp  inverse_dynamics_formulation_weighted_acc.hpp
include/kimm_hqp_controller/math/: constraint_base.hpp  constraint_bound.hpp  constraint_equality.hpp  constraint_inequality.hpp  fwd.hpp  util.hpp
include/kimm_hqp_controller/robot/: fwd.hpp  robot_wrapper.hpp
include/kimm_hqp_controller/solver/: fwd.hpp  solver_HQP_base.hpp  solver_HQP_eiquadprog.hpp  solver_HQP_eiquadprog_fast.hpp  solver_HQP_eiquadprog_rt.hpp  solver_HQP_eiquadprog_rt.hxx  solver_HQP_factory.hpp  solver_HQP_factory.hxx  solver_HQP_output.hpp  solver_HQP_qpoases.hpp  solver_HQP_whcod.hpp  util.hpp
include/kimm_hqp_controller/tasks/: fwd.hpp  task_base.hpp  task_contact_force.hpp  task_joint_bound.hpp  task_joint_posture.hpp  task_mobile_base.hpp  task_motion.hpp  task_se3_equality.hpp
include/kimm_hqp_controller/trajectory/: fwd.hpp  trajectory_base.hpp  trajectory_euclidian.hpp  trajectory_se3.hpp
include/kimm_hqp_controller/util/: Stdafx.hh  statistics.hpp  stop_watch.hpp
mujoco_py_example/: franka_single.py  zero_torque.py
mujoco_py_example/unit_test/: constraint.py  robot.py  simple_ik_mujoco.py  solver.py  trajectory.py
src/contact/: contact_base.cpp  contact_point.cpp
src/formulation/: contact_level.cpp  inverse_dynamics_formulation_acc.cpp  inverse_dynamics_formulation_base.cpp  inverse_dynamics_formulation_weighted_acc.cpp
src/math/: constraint_base.cpp  constraint_bound.cpp  constraint_equality.cpp  constraint_inequality.cpp  util.cpp
src/robot/: robot_wrapper.cpp
src/solver/: solver_HQP_base.cpp  solver_HQP_eiquadprog.cpp  solver_HQP_eiquadprog_fast.cpp  solver_HQP_factory.cpp  solver_HQP_qpoases.cpp  solver_HQP_whcod.cpp  util.cpp
src/tasks/: task_base.cpp  task_contact_force.cpp  task_joint_bound.cpp  task_joint_posture.cpp  task_mobile_base.cpp  task_motion.cpp  task_se3_equality.cpp
src/trajectory/: trajectory_euclidian.cpp  trajectory_se3.cpp
src/util/: statistics.cpp  stop_watch.cpp
test/: unittest_husky_panda.py  unittest_husky_panda_6d.py  unittest_osc.py
unittest/: test_solvers.cpp
